# fg3pico

./: CMakeLists.txt  README.md  pico_fg3.c  pico_fg3.h  pio_fg3.pio
